testsuite/tests/splice-imports/SI21.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
{-# LANGUAGE ExplicitStageImports #-}
module SI21 where

boo = 'a
